--- a/manifest.json
+++ b/manifest.json
@@ -1149,7 +1149,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.DialogueSystem.Dialogue.html",
-          "hash": "73QIdHMoFEC4ZMlDhAEpkQ=="
+          "hash": "SSjRO3c9jeYK9KAEZjgPZA=="
         }
       },
       "is_incremental": false,
@@ -1157,11 +1157,47 @@
     },
     {
       "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/MacroTools.DialogueSystem.DialogueManager.yml",
+      "source_relative_path": "api-macroTools/MacroTools.DialogueSystem.DialogueSequence.yml",
       "output": {
         ".html": {
-          "relative_path": "api-macroTools/MacroTools.DialogueSystem.DialogueManager.html",
-          "hash": "L3Y2Y6NgWP1C40kE5gEvaA=="
+          "relative_path": "api-macroTools/MacroTools.DialogueSystem.DialogueSequence.html",
+          "hash": "urd8tJHF5f39ZM/nPKwr2w=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/MacroTools.DialogueSystem.IHasPlayableDialogue.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/MacroTools.DialogueSystem.IHasPlayableDialogue.html",
+          "hash": "ml++oNm2EqkbWgMl+gaF+A=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/MacroTools.DialogueSystem.TriggeredDialogue.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/MacroTools.DialogueSystem.TriggeredDialogue.html",
+          "hash": "5KFXccLAf3eRLNIfz+B8EQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/MacroTools.DialogueSystem.TriggeredDialogueManager.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/MacroTools.DialogueSystem.TriggeredDialogueManager.html",
+          "hash": "jZUZHB0fxJ/Jw0OeBKu0Cg=="
         }
       },
       "is_incremental": false,
@@ -1173,7 +1209,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.DialogueSystem.html",
-          "hash": "H3L2Q+jKYlbzV1f1AAeVxg=="
+          "hash": "3gvA6BF5CRtdFsXqhGK13g=="
         }
       },
       "is_incremental": false,
@@ -1305,7 +1341,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.Extensions.TriggerExtensions.html",
-          "hash": "CQAZgMw2F4zHLSp0h/XdNQ=="
+          "hash": "SbipO97xiODX8nLU52bsFQ=="
         }
       },
       "is_incremental": false,
@@ -3921,7 +3957,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.Wrappers.SoundWrapper.html",
-          "hash": "2r5tr1XNZ9dqVldEYdMHFQ=="
+          "hash": "QkwUYwA2FMTqLGZtqn6qdw=="
         }
       },
       "is_incremental": false,
@@ -3969,7 +4005,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/toc.html",
-          "hash": "J8ZD/WIZHUg4wCit6Hbwyg=="
+          "hash": "p7W+hj9Jgba3xtSqdRNZ+w=="
         }
       },
       "is_incremental": false,
@@ -4185,7 +4221,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Dialogue.DruidsDialogueSetup.html",
-          "hash": "bDzJ4/Sm54kLRd96rSTKCA=="
+          "hash": "hUJjpO21T+RroyJ2UB774Q=="
         }
       },
       "is_incremental": false,
@@ -4221,7 +4257,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Dialogue.ScourgeDialogueSetup.html",
-          "hash": "NIaUEXt5gzv07+6iKAuIMg=="
+          "hash": "cACFVf+hj4nLca0sW8TR1A=="
         }
       },
       "is_incremental": false,
@@ -4245,7 +4281,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Dialogue.WarsongDialogueSetup.html",
-          "hash": "hFV8DGQeWY1jaIJmM75y+Q=="
+          "hash": "o1PhLbr26Gajz12SqzmwDA=="
         }
       },
       "is_incremental": false,
@@ -8904,7 +8940,7 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 734,
+          "total_file_count": 737,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
